# gentle

./: .gitignore  CMakeLists.txt  README.md  gentle.kdev4  inst.sh  run.sh  spr.sh
modules/: CMakeLists.txt
modules/init/: CMakeLists.txt
modules/init/include/gentle/: Init.h
modules/init/src/: Init.cpp
modules/mod_gen/: CMakeLists.txt
modules/mod_gen/src/: ModGen.cpp
modules/proj_gen/: CMakeLists.txt
modules/proj_gen/src/: ProjGen.cpp
src/: content.cpp  content.h  core_utils.cpp  core_utils.h  defer.h  generate_module.cpp  generate_module.h  generate_project.cpp  generate_project.h  keyword_binding.h  keyword_matcher.cpp  keyword_matcher.h  main.cpp  project_gen.h
src/generate/: generate_class.cpp  generate_class.h  generate_gpu_proj.cpp  generate_gpu_proj.h  generate_lang_proj.cpp  generate_lang_proj.h  generate_module.cpp  generate_module.h  generate_project.cpp  generate_project.h  generate_sub.cpp  generate_sub.h
src/run/: build.cpp  build.h  run.cpp  run.h
